--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,7 @@
 
 {% if user.is_authenticated %}
     <h5>welcome {{ user.username }}</h5>
+    <a href="{% url 'password_change' %}">change password</a>
     <form method="post" action="{% url 'logout' %}">
     {% csrf_token %}
     <button type="submit">log out</button>
