--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Login</button>
+    <a href="{% url 'password_reset' %}">forgot your password?</a>
     </form>
 {% endblock %}
