--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,11 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}login{% endblock %}
 
 {% block content %}
     <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit" class="btn btn-primary">Login</button>
     <a href="{% url 'password_reset' %}">forgot your password?</a>
     </form>
