--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,10 +1,12 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
+
 {% block title %}Password Change{% endblock %}
 
 {% block content %}
     <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit" class="btn btn-primary">submit</button>
     </form>
 {% endblock %}
