--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,12 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
+
 {% block title %}SignUp{% endblock %}
 
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
 {% endblock %}
