--- a/templates/account/password_reset_complete.html
+++ b/templates/account/password_reset_complete.html
@@ -5,5 +5,5 @@
     <p>
     your password has reset successfully
     </p>
-    <a href="{% url 'login' %}">login</a>
+    <a href="{% url 'account_login' %}">login</a>
 {% endblock %}
