--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,5 +7,6 @@
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-primary">Login</button>
+{#    <a href="{% url 'account_set_password' %}">forgot your password?</a>#}
     </form>
 {% endblock %}
