--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -4,6 +4,9 @@
 {% block title %}Password Change{% endblock %}
 
 {% block content %}
+    <p>Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.
+
+</p>
     <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
