--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,9 +1,10 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Password Change{% endblock %}
+{% block title %}Password Reset{% endblock %}
 
 {% block content %}
+      <p>set your new password:</p>
     <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
