--- a/templates/account/password_change_done.html
+++ b/templates/account/password_change_done.html
@@ -1,9 +1,10 @@
-{% extends '_base.html' %}
+{% extends '_base.html' %}{% load i18n %}
 {% block title %}Done{% endblock %}
 
+
+
 {% block content %}
-    <p>
-    your password has changed successfully
-    </p>
-    <a href="{% url 'home' %}">home</a>
+  <h2>{% trans "Password Change Successful" %} 🎉</h2>
+  <p>{% trans "Your password has been changed successfully." %}</p>
+  <p><a href="{% url 'account_change_password' %}">{% trans "Change Password again" %}</a></p>
 {% endblock %}
