--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Password Change{% endblock %}
+{% block title %}Password Reset{% endblock %}
 
 {% block content %}
     <p>Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.
