--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 {% block title %} محصول {{ product.title }}{% endblock %}
@@ -32,13 +33,13 @@
                     <div class="col-12 col-sm-8 product-main-details mt-md--50">
                         <div class="product-summary pl-lg--30 pl-md--0 text-right p-4">
                             <h3 class="product-title mb--20">{{ product.title }}</h3>
-{#                            <p class="product-short-description mb--20">#}
-{#                                {{ product.description }}#}
-{#                            </p>#}
+                            {#                            <p class="product-short-description mb--20">#}
+                            {#                                {{ product.description }}#}
+                            {#                            </p>#}
                             <div class="my-5 py-5 product-price-wrapper mb--25">
                                 <span class="money text-success">{{ product.price }} تومان</span>
-{#                                <span class="price-separator">-</span>#}
-{#                                <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>#}
+                                {#                                <span class="price-separator">-</span>#}
+                                {#                                <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>#}
                             </div>
                             <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                 <div class="quantity-wrapper d-flex justify-content-start">
@@ -77,14 +78,14 @@
                                 </a>
                                 <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab" data-toggle="tab"
                                    href="#nav-reviews" role="tab" aria-selected="true">
-                                    <span>نظرات (۱)</span>
+                                    <span>نظرات ({{ comment_count }})</span>
                                 </a>
                             </div>
                             <div class="tab-content product-data-tab__content" id="product-tabContent">
                                 <div class="tab-pane fade show active" id="nav-description" role="tabpanel"
                                      aria-labelledby="nav-description-tab">
                                     <div class="product-description text-justify">
-                                        <p>{{ product.description }}</p>
+                                        <p>{{ product.description|linebreaks }}</p>
 
 
                                     </div>
@@ -118,35 +119,39 @@
                                 <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                      aria-labelledby="nav-reviews-tab">
                                     <div class="product-reviews">
-                                        <h3 class="review__title">۱ نظر برای لباس تابستانی</h3>
+                                        <h3 class="review__title">{{ comment_count }} نظر
+                                            برای {{ product.title }}</h3>
                                         <ul class="review__list">
-                                            <li class="review__item">
-                                                <div class="review__container">
-                                                    <div class="review__text">
-                                                        <div class="d-flex flex-sm-row flex-row">
-                                                            <img src="assets/img/others/comment-1.jpg"
-                                                                 alt="Review Avatar" class="review__avatar">
-                                                            <div>
-                                                                <div class="review__meta">
-                                                                    <strong class="review__author px-4">علی
-                                                                        علوی</strong>
-                                                                    <span class="review__dash">-</span>
-                                                                    <span class="review__published-date">۱۲ مرداد ۱۴۰۱</span>
-                                                                </div>
-                                                                <div class="product-rating">
-                                                                    <div class="m-0 star-rating star-five">
-                                                                        <span>Rated <strong class="rating">5.00</strong> out of 5</span>
+                                            {% for comment in comments %}
+                                                <li class="review__item">
+                                                    <div class="review__container">
+                                                        <div class="review__text">
+                                                            <div class="d-flex flex-sm-row flex-row">
+                                                                {#                                                            <img src="assets/img/others/comment-1.jpg"#}
+                                                                {#                                                                 alt="Review Avatar" class="review__avatar">review__avatar#}
+                                                                <div>
+                                                                    <div class="review__meta">
+                                                                        <strong class="review__author px-4">{{ comment.user.username }}</strong>
+                                                                        <span class="review__dash">-</span>
+                                                                        <span class="review__published-date">{{ comment.updated_at }}</span>
+                                                                    </div>
+                                                                    <div class="product-rating">
+                                                                        {{ comment.get_stars_display }}
+                                                                        {#                                                                    <div class="m-0 star-rating star-five">#}
+                                                                        {#                                                                        <span>Rated <strong class="rating">5.00</strong> out of 5</span>#}
+                                                                        {#                                                                    </div>#}
                                                                     </div>
                                                                 </div>
                                                             </div>
+                                                            <p class="review__description text-right px-4">
+                                                                {{ comment.text|linebreaks }}
+                                                            </p>
                                                         </div>
-                                                        <p class="review__description text-right px-4">
-                                                            از خرید خودم راضی هستم. واقعا خیلی خوب بسته بندی شده بود و
-                                                            همینطور سر زمان رسید. واقعا نسبت به قیمت خیلی می ارزه.
-                                                        </p>
                                                     </div>
-                                                </div>
-                                            </li>
+                                                </li>
+                                            {% endfor %}
+
+
                                         </ul>
                                         <div class="review-form-wrapper">
                                             <div class="row">
@@ -154,29 +159,15 @@
                                                 <div class="col-lg-8 m-auto">
                                                     <span class="reply-title pull-right">نظر خود را بنویسید</span>
                                                     <br>
-                                                    <form action="#" class="form text-right">
+                                                    <form  action="{% url 'comment_create' product.pk%}" class="form text-right" method="post">
+                                                        {% csrf_token %}
                                                         <div class="form-notes mb--20">
                                                             <p class="my-3"><span class="required">*</span>ایمیل شما
                                                                 برای دیگران نشان داده نمیشود.</p>
                                                         </div>
-                                                        <div class="form__group mb--10">
-                                                            <label class="form__label d-block" for="email">متن نظر
-                                                                شما<span class="required">*</span></label>
-                                                            <textarea name="review" id="review"
-                                                                      class="form__input form__input--textarea"></textarea>
-                                                        </div>
-                                                        <div class="form__group mb--20">
-                                                            <label class="form__label d-block" for="name">نام شما<span
-                                                                    class="required">*</span></label>
-                                                            <input type="text" name="name" id="name"
-                                                                   class="form__input">
-                                                        </div>
-                                                        <div class="form__group mb--20">
-                                                            <label class="form__label d-block" for="email">ایمیل
-                                                                شما<span class="required">*</span></label>
-                                                            <input type="email" name="email" id="email"
-                                                                   class="form__input">
-                                                        </div>
+
+                                                        {{ comment_form|crispy }}
+
                                                         <div class="form__group">
                                                             <div class="form-row">
                                                                 <div class="col-12">
