--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
+{% load comment_tags %}
 
 {% block title %} محصول {{ product.title }}{% endblock %}
 
@@ -78,7 +79,7 @@
                                 </a>
                                 <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab" data-toggle="tab"
                                    href="#nav-reviews" role="tab" aria-selected="true">
-                                    <span>نظرات ({{ comment_count }})</span>
+                                    <span>نظرات ({{ comments|count_active_comments  }})</span>
                                 </a>
                             </div>
                             <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -119,10 +120,10 @@
                                 <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                      aria-labelledby="nav-reviews-tab">
                                     <div class="product-reviews">
-                                        <h3 class="review__title">{{ comment_count }} نظر
+                                        <h3 class="review__title">{{ comments| count_active_comments }} نظر
                                             برای {{ product.title }}</h3>
                                         <ul class="review__list">
-                                            {% for comment in comments %}
+                                            {% for comment in comments|only_active_comments %}
                                                 <li class="review__item">
                                                     <div class="review__container">
                                                         <div class="review__text">
