--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -43,7 +43,7 @@
                                                                 </a>
                                                             </div>
                                                         </div>
-                                                        <span class="product-badge">{{ pro.status }}</span>
+                                                        <span class="product-badge">{{ pro.get_status_display }}</span>
                                                     </figure>
                                                     <div class="product-info">
                                                         <h3 class="product-title h6 mb--15">
