--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,8 +2,8 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% load comment_tags %}
-
-{% block title %} محصول {{ product.title }}{% endblock %}
+{% load i18n %}
+{% block title %} {% trans 'product' %} {{ product.title }}{% endblock %}
 
 
 {% block content %}
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                        <h1 class="page-title">جزئیات محصول «{{ product.title }}»</h1>
+                        <h1 class="page-title">{% trans 'product detail of' %} «{{ product.title }}»</h1>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                             {#                                {{ product.description }}#}
                             {#                            </p>#}
                             <div class="my-5 py-5 product-price-wrapper mb--25">
-                                <span class="money text-success">{{ product.price }} تومان</span>
+                                <span class="money text-success">{{ product.price }} {% trans '$' %}</span>
                                 {#                                <span class="price-separator">-</span>#}
                                 {#                                <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>#}
                             </div>
@@ -51,15 +51,13 @@
                                 </div>
                                 <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
                                         onclick="window.location.href='cart.html'">
-                                    اضافه به سبد خرید
+                                    {% trans 'add to cart' %}
                                 </button>
                             </div>
                             <div class="product-footer-meta mt-5 pt-5">
-                                <p><span class="m-0">دسته بندی ها:</span>
+                                <p><span class="m-0">{% trans 'categories' %}</span>
                                     <a href="shop.html">لباس</a>,
-                                    <a href="shop.html">تابستانی</a>,
-                                    <a href="shop.html">گرم</a>,
-                                    <a href="shop.html">زنانه</a>
+
                                 </p>
                             </div>
                         </div>
@@ -79,7 +77,7 @@
                                 </a>
                                 <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab" data-toggle="tab"
                                    href="#nav-reviews" role="tab" aria-selected="true">
-                                    <span>نظرات ({{ comments|count_active_comments  }})</span>
+                                    <span>{% translate 'comments' %} ({{ comments|count_active_comments  }})</span>
                                 </a>
                             </div>
                             <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -108,9 +106,7 @@
                                                 <th>رنگ</th>
                                                 <td>
                                                     <a href="shop-sidebar.html">مشکی</a>,
-                                                    <a href="shop-sidebar.html">سبز</a>,
-                                                    <a href="shop-sidebar.html">قرمز</a>,
-                                                    <a href="shop-sidebar.html">نارنجی</a>,
+
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -158,7 +154,7 @@
                                             <div class="row">
                                                 <div class="border-top py-5 w-100"></div>
                                                 <div class="col-lg-8 m-auto">
-                                                    <span class="reply-title pull-right">نظر خود را بنویسید</span>
+                                                    <span class="reply-title pull-right">{% trans 'Write your comment' %}</span>
                                                     <br>
                                                     <form  action="{% url 'comment_create' product.pk%}" class="form text-right" method="post">
                                                         {% csrf_token %}
@@ -172,7 +168,7 @@
                                                         <div class="form__group">
                                                             <div class="form-row">
                                                                 <div class="col-12">
-                                                                    <input type="submit" value="ارسال"
+                                                                    <input type="submit" value="{% trans 'submit' %}"
                                                                            class="btn-submit">
                                                                 </div>
                                                             </div>
