--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load i18n %}
 {% block title %}Done{% endblock %}
 
 {% block content %}
@@ -9,7 +10,7 @@
 
                     <h2 class="text-success">
 
-                        رمز عبور شما با موفقیت تغییر یافت
+                        {% translate 'your password has reset successfully' %}
 
                        <p class="mt-4">مجدد <a href="{% url 'account_login' %}" class="text-info">وارد</a>  شوید</p>
                     </h2>
