--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,12 +1,13 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block title %}login{% endblock %}
 
 {% block content %}
     <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">{% translate 'Login' %}</button>
 {#    <a href="{% url 'account_set_password' %}">forgot your password?</a>#}
     </form>
 {% endblock %}
