working on cart

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -275,7 +275,7 @@
 <script src="{% static 'js/vendor.js' %}"></script>
 
 <!-- Main JS -->
-<script src="{% static 'assets/js/main.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 {% block scripts %}
 {% endblock scripts %}
 
