--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,139 +42,144 @@
                                 {#                                <span class="price-separator">-</span>#}
                                 {#                                <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>#}
                             </div>
-                            <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
-                                <div class="quantity-wrapper d-flex justify-content-start">
-                                    <div class="quantity">
-                                        <input type="number" class="quantity-input" name="qty" id="qty" value="1"
-                                               min="1">
-                                    </div>
-                                </div>
-                                <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
-                                        onclick="window.location.href='cart.html'">
-                                    {% trans 'add to cart' %}
-                                </button>
-                            </div>
-                            <div class="product-footer-meta mt-5 pt-5">
-                                <p><span class="m-0">{% trans 'categories' %}</span>
-                                    <a href="shop.html">لباس</a>,
 
-                                </p>
-                            </div>
+                            <form method="post" action="{% url 'cart:cart_add' product.id %}">
+                                {% csrf_token %}
+                                       <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
+                                    <div class="quantity-wrapper d-flex justify-content-start">
+                                        <div class="quantity">
+                                            <input type="number" class="quantity-input" name="quantity" id="qty" value="1" min="1">
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-small btn-bg-red btn-color-white btn-hover-2">
+                                        {% trans 'add to cart' %}
+                                    </button>
+                                </div>
+
+                            </form>
+
+                        </div>
+                        <div class="product-footer-meta mt-5 pt-5">
+                            {#                                <p><span class="m-0">{% trans 'categories' %}</span>#}
+                            {#                                    <a href="shop.html">لباس</a>,#}
+                            {##}
+                            {#                                </p>#}
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="product-data-tab tab-style-3">
-                            <div class="nav nav-tabs product-data-tab__head" id="product-tab" role="tablist">
-                                <a class="m-0 product-data-tab__link nav-link active" id="nav-description-tab"
-                                   data-toggle="tab" href="#nav-description" role="tab" aria-selected="true">
-                                    <span>توضیحات محصول</span>
-                                </a>
-                                <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
-                                   href="#nav-info" role="tab" aria-selected="true">
-                                    <span>ویژگی ها</span>
-                                </a>
-                                <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab" data-toggle="tab"
-                                   href="#nav-reviews" role="tab" aria-selected="true">
-                                    <span>{% translate 'comments' %} ({{ comments|count_active_comments  }})</span>
-                                </a>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="product-data-tab tab-style-3">
+                        <div class="nav nav-tabs product-data-tab__head" id="product-tab" role="tablist">
+                            <a class="m-0 product-data-tab__link nav-link active" id="nav-description-tab"
+                               data-toggle="tab" href="#nav-description" role="tab" aria-selected="true">
+                                <span>توضیحات محصول</span>
+                            </a>
+                            <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
+                               href="#nav-info" role="tab" aria-selected="true">
+                                <span>ویژگی ها</span>
+                            </a>
+                            <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab" data-toggle="tab"
+                               href="#nav-reviews" role="tab" aria-selected="true">
+                                <span>{% translate 'comments' %} ({{ comments|count_active_comments }})</span>
+                            </a>
+                        </div>
+                        <div class="tab-content product-data-tab__content" id="product-tabContent">
+                            <div class="tab-pane fade show active" id="nav-description" role="tabpanel"
+                                 aria-labelledby="nav-description-tab">
+                                <div class="product-description text-justify">
+                                    <p>{{ product.description|linebreaks }}</p>
+
+
+                                </div>
                             </div>
-                            <div class="tab-content product-data-tab__content" id="product-tabContent">
-                                <div class="tab-pane fade show active" id="nav-description" role="tabpanel"
-                                     aria-labelledby="nav-description-tab">
-                                    <div class="product-description text-justify">
-                                        <p>{{ product.description|linebreaks }}</p>
+                            <div class="tab-pane text-right" id="nav-info" role="tabpanel"
+                                 aria-labelledby="nav-info-tab">
+                                <div class="table-content table-responsive">
+                                    <table class="table shop_attributes">
+                                        <tbody>
+                                        <tr>
+                                            <th>وزن</th>
+                                            <td>۴۳۰ گرم</td>
+                                        </tr>
+                                        <tr>
+                                            <th>سایز</th>
+                                            <td>XL</td>
+                                        </tr>
+                                        <tr>
+                                            <th>رنگ</th>
+                                            <td>
+                                                <a href="shop-sidebar.html">مشکی</a>,
 
-
-                                    </div>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
-                                <div class="tab-pane text-right" id="nav-info" role="tabpanel"
-                                     aria-labelledby="nav-info-tab">
-                                    <div class="table-content table-responsive">
-                                        <table class="table shop_attributes">
-                                            <tbody>
-                                            <tr>
-                                                <th>وزن</th>
-                                                <td>۴۳۰ گرم</td>
-                                            </tr>
-                                            <tr>
-                                                <th>سایز</th>
-                                                <td>XL</td>
-                                            </tr>
-                                            <tr>
-                                                <th>رنگ</th>
-                                                <td>
-                                                    <a href="shop-sidebar.html">مشکی</a>,
-
-                                                </td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
-                                     aria-labelledby="nav-reviews-tab">
-                                    <div class="product-reviews">
-                                        <h3 class="review__title">{{ comments| count_active_comments }} نظر
-                                            برای {{ product.title }}</h3>
-                                        <ul class="review__list">
-                                            {% for comment in comments|only_active_comments %}
-                                                <li class="review__item">
-                                                    <div class="review__container">
-                                                        <div class="review__text">
-                                                            <div class="d-flex flex-sm-row flex-row">
-                                                                {#                                                            <img src="assets/img/others/comment-1.jpg"#}
-                                                                {#                                                                 alt="Review Avatar" class="review__avatar">review__avatar#}
-                                                                <div>
-                                                                    <div class="review__meta">
-                                                                        <strong class="review__author px-4">{{ comment.user.username }}</strong>
-                                                                        <span class="review__dash">-</span>
-                                                                        <span class="review__published-date">{{ comment.updated_at }}</span>
-                                                                    </div>
-                                                                    <div class="product-rating">
-                                                                        {{ comment.get_stars_display }}
-                                                                        {#                                                                    <div class="m-0 star-rating star-five">#}
-                                                                        {#                                                                        <span>Rated <strong class="rating">5.00</strong> out of 5</span>#}
-                                                                        {#                                                                    </div>#}
-                                                                    </div>
+                            </div>
+                            <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
+                                 aria-labelledby="nav-reviews-tab">
+                                <div class="product-reviews">
+                                    <h3 class="review__title">{{ comments| count_active_comments }} نظر
+                                        برای {{ product.title }}</h3>
+                                    <ul class="review__list">
+                                        {% for comment in comments|only_active_comments %}
+                                            <li class="review__item">
+                                                <div class="review__container">
+                                                    <div class="review__text">
+                                                        <div class="d-flex flex-sm-row flex-row">
+                                                            {#                                                            <img src="assets/img/others/comment-1.jpg"#}
+                                                            {#                                                                 alt="Review Avatar" class="review__avatar">review__avatar#}
+                                                            <div>
+                                                                <div class="review__meta">
+                                                                    <strong class="review__author px-4">{{ comment.user.username }}</strong>
+                                                                    <span class="review__dash">-</span>
+                                                                    <span class="review__published-date">{{ comment.updated_at }}</span>
+                                                                </div>
+                                                                <div class="product-rating">
+                                                                    {{ comment.get_stars_display }}
+                                                                    {#                                                                    <div class="m-0 star-rating star-five">#}
+                                                                    {#                                                                        <span>Rated <strong class="rating">5.00</strong> out of 5</span>#}
+                                                                    {#                                                                    </div>#}
                                                                 </div>
                                                             </div>
-                                                            <p class="review__description text-right px-4">
-                                                                {{ comment.text|linebreaks }}
-                                                            </p>
+                                                        </div>
+                                                        <p class="review__description text-right px-4">
+                                                            {{ comment.text|linebreaks }}
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        {% endfor %}
+
+
+                                    </ul>
+                                    <div class="review-form-wrapper">
+                                        <div class="row">
+                                            <div class="border-top py-5 w-100"></div>
+                                            <div class="col-lg-8 m-auto">
+                                                <span class="reply-title pull-right">{% trans 'Write your comment' %}</span>
+                                                <br>
+                                                <form action="{% url 'comment_create' product.pk %}"
+                                                      class="form text-right" method="post">
+                                                    {% csrf_token %}
+                                                    <div class="form-notes mb--20">
+                                                        <p class="my-3"><span class="required">*</span>ایمیل شما
+                                                            برای دیگران نشان داده نمیشود.</p>
+                                                    </div>
+
+                                                    {{ comment_form|crispy }}
+
+                                                    <div class="form__group">
+                                                        <div class="form-row">
+                                                            <div class="col-12">
+                                                                <input type="submit" value="{% trans 'submit' %}"
+                                                                       class="btn-submit">
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                </li>
-                                            {% endfor %}
-
-
-                                        </ul>
-                                        <div class="review-form-wrapper">
-                                            <div class="row">
-                                                <div class="border-top py-5 w-100"></div>
-                                                <div class="col-lg-8 m-auto">
-                                                    <span class="reply-title pull-right">{% trans 'Write your comment' %}</span>
-                                                    <br>
-                                                    <form  action="{% url 'comment_create' product.pk%}" class="form text-right" method="post">
-                                                        {% csrf_token %}
-                                                        <div class="form-notes mb--20">
-                                                            <p class="my-3"><span class="required">*</span>ایمیل شما
-                                                                برای دیگران نشان داده نمیشود.</p>
-                                                        </div>
-
-                                                        {{ comment_form|crispy }}
-
-                                                        <div class="form__group">
-                                                            <div class="form-row">
-                                                                <div class="col-12">
-                                                                    <input type="submit" value="{% trans 'submit' %}"
-                                                                           class="btn-submit">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
