--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,5 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
+{% load i18n %}
 {% block title %}Products{% endblock %}
 {% block content %}
 
@@ -49,19 +50,25 @@
                                                         <h3 class="product-title h6 mb--15">
                                                             <a href="{{ pro.get_absolute_url }}">{{ pro.title }}</a>
                                                         </h3>
-                                                         <div class="product-price-wrapper mb--30">
+                                                        <div class="product-price-wrapper mb--30">
                                                             <span class="money">{{ pro.price }} تومان</span>
                                                         </div>
-{#                                                        <div class="product-price-wrapper mb--30">#}
-{#                                                            <span class="money text-success">{{ pro.price }} تومان</span>#}
-{#                                                            <span class="money-separator">-</span>#}
-{#                                                            <span class="old-price text-danger">#}
-{#                                                                <span class="money text-danger">۸۰,۰۰۰ تومان</span>#}
-{#                                                            </span>#}
-{#                                                        </div>#}
-                                                        <a href="cart.html"
-                                                           class="btn btn-small btn-bg-sand btn-color-dark px-3">اضافه
-                                                            کردن به سبد خرید</a>
+                                                        {#                                                        <div class="product-price-wrapper mb--30">#}
+                                                        {#                                                            <span class="money text-success">{{ pro.price }} تومان</span>#}
+                                                        {#                                                            <span class="money-separator">-</span>#}
+                                                        {#                                                            <span class="old-price text-danger">#}
+                                                        {#                                                                <span class="money text-danger">۸۰,۰۰۰ تومان</span>#}
+                                                        {#                                                            </span>#}
+                                                        {#                                                        </div>#}
+                                                        <form method="post" action="{% url 'cart:cart_add' pro.pk %}">
+                                                            {% csrf_token %}
+                                                            <input type="number" class="quantity-input" name="quantity"
+                                                                   id="qty" value="1" min="1" style="display: none">
+
+                                                            <button type="submit"
+                                                                    class="btn btn-small btn-bg-sand btn-color-dark px-3">{% trans 'add to cart' %}</button>
+                                                        </form>
+
                                                     </div>
                                                 </div>
                                             </div>
